samples/_failures_safe/1761319733_21e3b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b9d0cf5.c: In function ‘main’:
./samples/SAFE/__tmp_2b9d0cf5.c:158:51: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  158 |                 int status = add_matrices(&mat1, &mat
      |                                                   ^~~
      |                                                   mat2
./samples/SAFE/__tmp_2b9d0cf5.c:158:51: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2b9d0cf5.c:158:54: error: expected ‘)’ at end of input
  158 |                 int status = add_matrices(&mat1, &mat
      |                                          ~           ^
      |                                                      )
./samples/SAFE/__tmp_2b9d0cf5.c:158:30: error: too few arguments to function ‘add_matrices’
  158 |                 int status = add_matrices(&mat1, &mat
      |                              ^~~~~~~~~~~~
./samples/SAFE/__tmp_2b9d0cf5.c:98:5: note: declared here
   98 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_2b9d0cf5.c:158:17: error: expected declaration or statement at end of input
  158 |                 int status = add_matrices(&mat1, &mat
      |                 ^~~
./samples/SAFE/__tmp_2b9d0cf5.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b9d0cf5.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b9d0cf5.c:158:17: error: expected declaration or statement at end of input
